--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Goodness Arinzechukwu Okafor" />
     <meta name="description" content="WDD 230 - Web Frontend Development" />
