--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Goodness Arinzechukwu Okafor" />
-    <meta name="description" content="WDD 230 - Web Frontend Development" />
+    <meta name="description" content="WDD 230 - Web Frontend Development, Goodness Arinze Okafor - course assignment portal" />
     <link rel="stylesheet" href="styles/base.css" />
-    <title>Goodness Okafor - WDD 230 - Web Frontend Development</title>
+    <title>Goodness Arinze Okafor - WDD 230 - Web Frontend Development</title>
   </head>
   <body>
     <header>
