Your Course Home Page submission modification

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Goodness Arinzechukwu Okafor" />
-    <meta name="description" content="WDD 230 - Web Frontend Development, Goodness Arinze Okafor - course assignment portal" />
+    <meta name="description" content="WDD 230 - Web Frontend Development, Goodness Arinzechukwu Okafor - course assignment portal" />
     <link rel="stylesheet" href="styles/base.css" />
     <title>Goodness Arinze Okafor - WDD 230 - Web Frontend Development</title>
   </head>
