Social Media Meta Tags submission

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="WDD 230 - Web Frontend Development, Goodness Arinzechukwu Okafor - course assignment portal"
     />
-    <meta property="title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
-    <meta property="type" content="website"/>
-    <meta property="image" content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg">
-    <meta property="url" content="https://heavenlyaura.github.io/wdd230/">
+    <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg">
+    <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/">
     <link rel="stylesheet" href="styles/base.css" />
     <title>
       Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development
