--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3>Learning Activities</h3>
         <ol class="activities">
           <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
-          <li></li>
+          <li><a href="lesson02/design.html">Design Principles</a></li>
           <li></li>
           <li></li>
           <li></li>
