--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="card">
         <h3>Learning Activities</h3>
         <ol class="activities">
-          <li><a href="lesson01/holygrail.html">Holy Grail</a></li>
+          <li><a href="lesson01/holygrail.html">Holy Grail</a> | <a href="lesson01/media-query.html">Media Query</a></li>
           <li><a href="lesson02/design.html">Design Principles</a></li>
           <li></li>
           <li></li>
