--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Goodness Arinzechukwu Okafor" />
     <meta
       name="description"
-      content="WDD 230 - Web Frontend Development, Goodness Arinzechukwu Okafor - course assignment portal"
+      content="course assignment portal"
     />
     <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
     <meta property="og:type" content="website"/>
