--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/larger.css">
     <title>
       Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development
     </title>
   </head>
   <body>
     <header>
-      <img class="my-image" src="images/my-picture.jpg" alt="my picture" />
+      <div class="profile-picture"><img class="my-image" src="images/my-picture.jpg" alt="my picture" /></div>
       <h1>Goodness Arinzechukwu Okafor</h1>
     </header>
     <nav>
       <a href="#">Home</a>
       <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-      <a href="#">Chamber</a>
+      <a href="chamber/">Chamber</a>
       <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
       <a
-        href="https://www.churchofjesuschrist.org/study/scriptures"
+        href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
         target="_blank"
         >Scripture</a
       >
