course homepage enhancment

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Goodness Arinzechukwu Okafor" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="author" content="Goodness Arinzechukwu Okafor" >
     <meta
       name="description"
       content="course assignment portal"
-    />
-    <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
-    <meta property="og:type" content="website"/>
+    >
+    <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg">
     <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/base.css" >
     <link rel="stylesheet" href="styles/larger.css">
     <title>
       Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <div class="profile-picture"><img class="my-image" src="images/my-picture.jpg" alt="my picture" /></div>
+      <div class="profile-picture"><img class="my-image" src="images/my-picture.jpg" alt="my picture" ></div>
       <h1>Goodness Arinzechukwu Okafor</h1>
     </header>
     <nav>
@@ -38,7 +38,7 @@
     </nav>
     <main>
       <h2>WDD 230: Web Frontend Development</h2>
-      <hr />
+      <hr >
       <section class="card">
         <h3>Learning Activities</h3>
         <ol class="activities">
@@ -61,7 +61,7 @@
       </section>
     </main>
     <footer>
-      <p id="copyright">Goodness Ariinze Okafor, Abuja Nigeria</p>
+      <p id="copyright">Goodness Arinze Okafor, Abuja Nigeria</p>
       <p id="last-modified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
