--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3>Learning Activities</h3>
         <ol class="activities">
           <li><a href="lesson01/holygrail.html">Holy Grail</a> | <a href="lesson01/media-query.html">Media Query</a></li>
-          <li><a href="lesson02/design.html">Design Principles</a></li>
+          <li><a href="lesson02/design.html">Design</a></li> | <a href="lesson02/design-principles.html">Design Principles</a>
           <li></li>
           <li></li>
           <li></li>
