03 Assignment: Chamber Site Plan submission

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
             <a href="https://codepen.io/Goodness-Okafor/pen/YzgQmjV"
               >Codepen Activity 2</a
             >
+            |
+            <a href="lesson03/chamber-site-plan.html"
+              >Chamber chamber-site-plan</a
+            >
           </li>
           <li></li>
           <li></li>
