03 Assignment: Chamber Site Plan submission

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -10,165 +10,176 @@
   </head>
   <body>
     <header>
-      <h1>Chamber of Commerce Site-Plan</h1>
+      <h1>Chamber of Commerce Site Plan</h1>
       <h2>Goodness A. Okafor</h2>
       <h2>WDD 230-Section A5</h2>
     </header>
     <main>
-      <h3>Overview</h3>
-      <h4>Purpose</h4>
-      <p>
-        Welcome to Kubwa Chamber of Commerce, Discover the heartbeat of Kubwa's
-        vibrant business community at our Chamber of Commerce. We are a dynamic
-        network of local businesses, professionals, and entrepreneurs dedicated
-        to fostering growth, collaboration, and prosperity. As the pulse of
-        economic vitality in Kubwa, our Chamber is committed to championing the
-        interests of our members, advocating for a thriving business
-        environment, and creating unparalleled networking opportunities.
-        <br /><br />
+      <section class="overview">
+        <h3>Site Name</h3>
+        <h4>Kubwa Chamber of Commerce</h4>
+        <h3>Overview</h3>
+        <h4>Purpose</h4>
+        <p>
+          Welcome to Kubwa Chamber of Commerce, Discover the heartbeat of
+          Kubwa's vibrant business community at our Chamber of Commerce. We are
+          a dynamic network of local businesses, professionals, and
+          entrepreneurs dedicated to fostering growth, collaboration, and
+          prosperity. As the pulse of economic vitality in Kubwa, our Chamber is
+          committed to championing the interests of our members, advocating for
+          a thriving business environment, and creating unparalleled networking
+          opportunities.
+          <br /><br />
 
-        Explore the possibilities, connect with like-minded professionals, and
-        unlock the resources you need for success. Whether you're a seasoned
-        business owner, a budding entrepreneur, or someone passionate about the
-        local business landscape, Kubwa Chamber of Commerce is your gateway to a
-        world of opportunities. Join us in shaping the future of business and
-        building a stronger, more prosperous community together. Welcome to a
-        dynamic business experience!
-      </p>
+          Explore the possibilities, connect with like-minded professionals, and
+          unlock the resources you need for success. Whether you're a seasoned
+          business owner, a budding entrepreneur, or someone passionate about
+          the local business landscape, Kubwa Chamber of Commerce is your
+          gateway to a world of opportunities. Join us in shaping the future of
+          business and building a stronger, more prosperous community together.
+          Welcome to a dynamic business experience!
+        </p>
 
-      <h4>Audience</h4>
-      <p>
-        At Kubwa Chamber of Commerce, we extend a warm welcome to you - our
-        valued audience and community members. Whether you're a business owner,
-        professional, aspiring entrepreneur, or a resident with a keen interest
-        in local commerce, you've found your gateway to a world of
-        opportunities.
-        <br />
-        <br />
-        Our Chamber is more than just an organization; it's a vibrant community
-        of diverse talents, ideas, and aspirations. We invite you to explore the
-        rich tapestry of businesses that make up the backbone of Kubwa's
-        economy. From established enterprises to innovative startups, our
-        community thrives on collaboration, networking, and collective success.
-        <br />
-        <br />
-        As you navigate our website, you'll discover a wealth of resources,
-        insights, and events tailored to empower you in your professional
-        journey. Whether you're seeking business support, looking to connect
-        with like-minded individuals, or simply want to stay informed about the
-        pulse of local commerce - you're in the right place.
-      </p>
+        <h4>Audience</h4>
+        <p>
+          At Kubwa Chamber of Commerce, we extend a warm welcome to you - our
+          valued audience and community members. Whether you're a business
+          owner, professional, aspiring entrepreneur, or a resident with a keen
+          interest in local commerce, you've found your gateway to a world of
+          opportunities.
+          <br />
+          <br />
+          Our Chamber is more than just an organization; it's a vibrant
+          community of diverse talents, ideas, and aspirations. We invite you to
+          explore the rich tapestry of businesses that make up the backbone of
+          Kubwa's economy. From established enterprises to innovative startups,
+          our community thrives on collaboration, networking, and collective
+          success.
+          <br />
+          <br />
+          As you navigate our website, you'll discover a wealth of resources,
+          insights, and events tailored to empower you in your professional
+          journey. Whether you're seeking business support, looking to connect
+          with like-minded individuals, or simply want to stay informed about
+          the pulse of local commerce - you're in the right place.
+        </p>
 
-      <h4>Scenarios</h4>
-      <p>
-        Scenario 1: Networking Opportunity You: as a local business owner,
-        recently joined the Kubwa Chamber of Commerce. One of your
-        goals is to expand your professional network and collaborate with other
-        businesses. How would you leverage the Chamber's resources and events to
-        enhance your networking experience?
+        <h4>Scenarios</h4>
+        <p>
+          Scenario 1: Networking Opportunity You: as a local business owner,
+          recently joined the Kubwa Chamber of Commerce. One of your goals is to
+          expand your professional network and collaborate with other
+          businesses. How would you leverage the Chamber's resources and events
+          to enhance your networking experience? In the discover page you will
+          find other business owners and entrepreneur looking to connect, here
+          you can find all the networking opportunities you will need!
+        </p>
+        <p>
+          Scenario 2: Advocacy and Policy Change: Imagine you are a passionate
+          advocate for sustainable business practices in Kubwa. As a Chamber of
+          Commerce member, how would you engage with the organization to
+          advocate for environmentally friendly policies that benefit both
+          businesses and the local community? What steps would you take to drive
+          positive change? In the Kubwa Chamber if commerce we are versetile in
+          our means of communication and with that all voices are welcome and
+          when changes are made all members of the community are promptly and
+          duly noted!
+        </p>
+        <p>
+          Scenario 3: Community Engagement: You are a resident who recently
+          moved to Kubwa and wants to actively engage with the local business
+          community. How can the Chamber of Commerce serve as a bridge between
+          residents and businesses, and what events or initiatives would you
+          attend to connect with local entrepreneurs and gain a deeper
+          understanding of the city's economic landscape? We pride ourselves in
+          our inclusivity, here in Kubwa chamber of commerce, all is welcome.
+          Come and enjoy this community to the fullest!!
+        </p>
+      </section>
 
-        In the discover page you will find other business owners and entrepreneur looking to connect, here you can find all the networking opportunities you will need!
-      </p>
-      <p>
-        Scenario 2: Advocacy and Policy Change: Imagine you are a passionate
-        advocate for sustainable business practices in Kubwa. As a
-        Chamber of Commerce member, how would you engage with the organization
-        to advocate for environmentally friendly policies that benefit both
-        businesses and the local community? What steps would you take to drive
-        positive change?
-
-        In the Kubwa Chamber if commerce we are versetile in our means of communication and with that all voices are welcome and when changes are made all members of the community are promptly and duly noted!
-      </p>
-      <p>
-        Scenario 3: Community Engagement: You are a resident who recently moved
-        to Kubwa and wants to actively engage with the local business
-        community. How can the Chamber of Commerce serve as a bridge between
-        residents and businesses, and what events or initiatives would you
-        attend to connect with local entrepreneurs and gain a deeper
-        understanding of the city's economic landscape?
-
-        We pride ourselves in our inclusivity, here in Kubwa chamber of commerce, all is welcome. Come and enjoy this community to the fullest!!
-      </p>
       <hr />
 
-      <h3>Branding</h3>
-      <h4>Website Logo</h4>
-      <div class="website-logo">
-        <img src="images/chamber-logo.png" alt="Website Logo" />
-      </div>
-      <hr />
+      <section class="information">
+        <h3>Branding</h3>
+        <h4>Website Logo</h4>
+        <div class="website-logo">
+          <img src="images/chamber-logo.png" alt="Website Logo" />
+        </div>
+        <hr />
 
-      <h4>Style Guide</h4>
-      <h4>Color Palette</h4>
+        <h4>Style Guide</h4>
+        <h4>Color Schema</h4>
 
-      <div class="palette">
-        <p>Palette URL:</p>
+        <div class="palette">
+          <p>Palette URL:</p>
 
-        <a href="#">URL</a>
-      </div>
+          <a href="#">URL</a>
+        </div>
 
-      <table class="colors">
-        <tr>
-          <th class="primary">Primary</th>
-          <th class="secondary">Secondary</th>
-          <th class="accent1">Accent1</th>
-          <th class="accent2">Accent2</th>
-        </tr>
-        <tr>
-          <td class="primary">#0f110f</td>
-          <td class="secondary">#362417</td>
-          <td class="accent1">#605b59</td>
-          <td class="accent2">#fffbff</td>
-        </tr>
-      </table>
+        <table class="colors">
+          <tr>
+            <th class="primary">Primary</th>
+            <th class="secondary">Secondary</th>
+            <th class="accent1">Accent1</th>
+            <th class="accent2">Accent2</th>
+          </tr>
+          <tr>
+            <td class="primary">#0f110f</td>
+            <td class="secondary">#362417</td>
+            <td class="accent1">#605b59</td>
+            <td class="accent2">#fffbff</td>
+          </tr>
+        </table>
 
-      <h3>Typography</h3>
-      <h4>Heading: DynaPuff</h4>
-      <h4>Paragraph Font: Roboto</h4>
-      <h4>Normal Paragraph Example:</h4>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam itaque
-        sequi inventore non a, tenetur deleniti harum! Corrupti porro ratione
-        excepturi assumenda magni! Soluta ipsa necessitatibus sint aliquam iste
-        voluptas.
-      </p>
-      <h4>Paragraph With Color Example</h4>
-      <p class="with-color">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quis cum
-        unde ad minima dolor vitae excepturi, reprehenderit impedit quo! Eaque
-        fugiat voluptatum totam provident in doloribus, odit quibusdam. Itaque!
-      </p>
+        <h3>Typography</h3>
+        <h4>Heading: DynaPuff</h4>
+        <h4>Paragraph Font: Roboto</h4>
+        <h4>Normal Paragraph Example:</h4>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam
+          itaque sequi inventore non a, tenetur deleniti harum! Corrupti porro
+          ratione excepturi assumenda magni! Soluta ipsa necessitatibus sint
+          aliquam iste voluptas.
+        </p>
+        <h4>Paragraph With Color Example</h4>
+        <p class="with-color">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quis
+          cum unde ad minima dolor vitae excepturi, reprehenderit impedit quo!
+          Eaque fugiat voluptatum totam provident in doloribus, odit quibusdam.
+          Itaque!
+        </p>
 
-      <h3>Navigation</h3>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Discover</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
-      </nav>
+        <h3>Navigation</h3>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </nav>
 
-      <h3>Sitemap</h3>
-      <div class="sitemap">
-        <img src="images/sitemaps.png" alt="sitemap" />
-      </div>
+        <h3>Sitemap</h3>
+        <div class="sitemap">
+          <img src="images/sitemaps.png" alt="sitemap" />
+        </div>
 
-      <h3>Wireframes</h3>
+        <h3>Wireframes</h3>
 
-      <div class="wireframe">
-        <h4>Home</h4>
-        <img src="images/homepage.png" alt="wireframe" />
-        <h4>Discover</h4>
-        <img class="wireframe" src="images/wirefame-p2.png" alt="wireframe" />
-        <h4>Contact Us</h4>
-        <img
-          class="wireframe"
-          src="images/contact-p-site.png"
-          alt="wireframe"
-        />
-        <h4>Mobile View</h4>
-        <img src="images/mobile-view.png" alt="mobile-view">
-      </div>
+        <div class="wireframe">
+          <h4>Home</h4>
+          <img src="images/homepage.png" alt="wireframe" />
+          <h4>Discover</h4>
+          <img class="wireframe" src="images/wirefame-p2.png" alt="wireframe" />
+          <h4>Contact Us</h4>
+          <img
+            class="wireframe"
+            src="images/contact-p-site.png"
+            alt="wireframe"
+          />
+          <h4>Mobile View</h4>
+          <img src="images/mobile-view.png" alt="mobile-view" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
