03 Assignment: Chamber Site Plan submission

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -17,7 +17,7 @@
     <main>
       <section class="overview">
         <h3>Site Name</h3>
-        <h4>Kubwa Chamber of Commerce</h4>
+        <h4 class="sitename">Kubwa Chamber of Commerce</h4>
         <h3>Overview</h3>
         <h4>Purpose</h4>
         <p>
