--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
               >Codepen Activity 2</a
             >
           </li>
-          <li></li>
+          <li>
+            <a href="https://codepen.io/Goodness-Okafor/pen/XWGzxEW"
+              >Code pen``</a
+            >
+          </li>
           <li></li>
           <li></li>
           <li></li>
