--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
           <li>
             <a href="https://codepen.io/Goodness-Okafor/pen/XWGzxEW"
-              >Code pen``</a
+              >Code pen</a
             >
           </li>
           <li></li>
