CSS Pseudo-Classes

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       </section>
       <div class="iframe">
         <iframe
+          title="Area map"
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d84371.59729517039!2d7.282171261253809!3d9.148857368994495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1706021749332!5m2!1sen!2sng"
           style="border: 0"
           allowfullscreen=""
