04 Assignment: Chamber Home Page Build

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,6 +8,16 @@
       name="description"
       content="This is the kubwa Chamber of Commerce Website"
     />
+    <meta
+      property="og:title"
+      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
+    />
+    <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/medium.css" />
     <link rel="stylesheet" href="styles/larger.css" />
@@ -29,7 +39,7 @@
       <div class="hero">
         <img src="images/hero-img.jpg" alt="Hero Image" />
         <div class="introduction">
-          <h3>Kubwa Chamber of Commerce</h3>
+          <h1>Kubwa Chamber of Commerce</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet et
             rerum, pariatur ad quaerat repudiandae id ducimus molestias culpa.
@@ -38,9 +48,7 @@
         </div>
       </div>
       <div class="sights">
-        <br />
         <img src="#" alt="image of kubwa" class="cards" />
-        <br />
         <img src="#" alt="image of kubwa" class="cards" />
       </div>
       <section class="current-event">
