04 Assignment: Chamber Home Page Build

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,6 +18,7 @@
       content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
     />
     <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/medium.css" />
     <link rel="stylesheet" href="styles/larger.css" />
