--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/medium.css" />
     <link rel="stylesheet" href="styles/larger.css" />
+    <link rel="icon" href="favicon.ico" />
     <title>Kubwa Chamber of Commerce</title>
   </head>
   <body>
@@ -49,6 +50,7 @@
         </div>
       </div>
       <div class="sights">
+        <img src="#" alt="image of kubwa" class="cards" />
         <img src="#" alt="image of kubwa" class="cards" />
         <img src="#" alt="image of kubwa" class="cards" />
       </div>
