05 Assignment: DOM Manipulation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             >Scripture</a
           >
         </li>
+        <li><a href="lesson05/bom.html">DOM Manipulation</a></li>
       </ul>
     </nav>
     <main>
