--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/bom.css">
-    <title>Document</title>
+    <meta name="description" content="05 Assignment: DOM Manipulation">
+    <meta name="author" content="Goodness Arinze Okafor">
+    <link rel="stylesheet" href="styles/bom.css" />
+    <title>DOM Manipulation
+    </title>
   </head>
-  <body>
+  <body> 
     <h1>📖 Book of Mormon - Top 10</h1>
     <main>
       <label for="favchap">Enter Book and Chapter: </label>
