05 Assignment: DOM Manipulation

--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -6,8 +6,7 @@
     <meta name="description" content="05 Assignment: DOM Manipulation">
     <meta name="author" content="Goodness Arinze Okafor">
     <link rel="stylesheet" href="styles/bom.css" />
-    <title>DOM Manipulation
-    </title>
+    <title>05 Assignment: DOM Manipulation</title>
   </head>
   <body> 
     <h1>📖 Book of Mormon - Top 10</h1>
