05: Chamber of Commerce Home Page Continued

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,6 +29,13 @@
     <header>
       <img src="images/chamber-logo.png" alt="logo" />
       <a href="#" id="menu"></a>
+
+      <div class="toggle-container">
+        <label for="mytoggle" class="toggle">
+          <input type="checkbox" id="mytoggle" class="toggle-input">
+          <div class="toggle-fill"></div>
+        </label>
+      </div>
     </header>
     <nav>
       <ul class="navigation">
@@ -101,5 +108,6 @@
     </footer>
     <script src="../scripts/hambuger.js"></script>
     <script src="../scripts/getdates.js"></script>
+    <script src="scripts/toggle.js"></script>
   </body>
 </html>
