05: Chamber of Commerce Home Page Continued

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
       property="og:title"
       content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website" >
     <meta
       property="og:image"
       content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
