05: Chamber of Commerce Home Page Continued

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
       <div class="toggle-container">
         <label for="mytoggle" class="toggle">
           <input type="checkbox" id="mytoggle" class="toggle-input">
-          <div class="toggle-fill"></div>
+          <span class="toggle-fill"></span>
         </label>
       </div>
     </header>
