--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,13 +12,13 @@
       property="og:title"
       content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
     />
-    <meta property="og:type" content="website" >
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
     />
     <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/medium.css" />
     <link rel="stylesheet" href="styles/larger.css" />
@@ -32,7 +32,7 @@
 
       <div class="toggle-container">
         <label for="mytoggle" class="toggle">
-          <input type="checkbox" id="mytoggle" class="toggle-input">
+          <input type="checkbox" id="mytoggle" class="toggle-input" />
           <span class="toggle-fill"></span>
         </label>
       </div>
@@ -57,9 +57,9 @@
         </div>
       </div>
       <div class="sights">
-        <img src="#" alt="image of kubwa" class="cards" />
-        <img src="#" alt="image of kubwa" class="cards" />
-        <img src="#" alt="image of kubwa" class="cards" />
+        <img src="images/image-1.jpg" alt="image of kubwa" class="cards" />
+        <img src="images/image-2.jpg" alt="image of kubwa" class="cards" />
+        <img src="images/image-3.jpg" alt="image of kubwa" class="cards" />
       </div>
       <section class="current-event">
         <h3>current Events</h3>
@@ -100,10 +100,16 @@
       <p id="last-modified"></p>
       <p>WDD-230 Project</p>
       <div class="icons">
-        <img src="#" alt="facebook icon" class="social" />
-        <img src="#" alt="instagram icon" class="social" />
-        <img src="#" alt="Linkedin icon" class="social" />
-        <img src="#" alt="X icon" class="social" />
+        <a href="">
+          <img src="images/facebook.png" alt="facebook icon" class="social"
+        /></a>
+        <img src="images/instagram.png" alt="instagram icon" class="social" />
+        <a href="">
+          <img src="images/linkedin.png" alt="Linkedin icon" class="social"
+        /></a>
+        <a href="">
+          <img src="images/twitter.png" alt="X icon" class="social"
+        /></a>
       </div>
     </footer>
     <script src="../scripts/hambuger.js"></script>
