05: Chamber of Commerce Home Page Continued

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -100,16 +100,11 @@
       <p id="last-modified"></p>
       <p>WDD-230 Project</p>
       <div class="icons">
-        <a href="">
-          <img src="images/facebook.png" alt="facebook icon" class="social"
-        /></a>
-        <img src="images/instagram.png" alt="instagram icon" class="social" />
-        <a href="">
-          <img src="images/linkedin.png" alt="Linkedin icon" class="social"
-        /></a>
-        <a href="">
-          <img src="images/twitter.png" alt="X icon" class="social"
-        /></a>
+        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"><img src="images/facebook.png" alt="facebook icon"></a>
+        <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><img src="images/instagram.png" alt="instagram icon"></a>
+        <a href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img src="images/linkedin.png" alt="linked icon"></a>
+        <a href="https://twitter.com/eznira_"><img src="images/twitter.png" alt="twitter icon"></a>
+        
       </div>
     </footer>
     <script src="../scripts/hambuger.js"></script>
