--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,19 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Goodness Okafor" />
-    <meta
-      name="description"
-      content="This is the kubwa Chamber of Commerce Website"
-    />
-    <meta
-      property="og:title"
-      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
-    />
+    <meta name="description"content="This is the kubwa Chamber of Commerce Website"/>
+    <meta property="og:title"content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
-    />
+    <meta property="og:image"content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"/>
     <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/base.css" />
@@ -100,11 +91,20 @@
       <p id="last-modified"></p>
       <p>WDD-230 Project</p>
       <div class="icons">
-        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"><img src="images/facebook.png" alt="facebook icon"></a>
-        <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><img src="images/instagram.png" alt="instagram icon"></a>
-        <a href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img src="images/linkedin.png" alt="linked icon"></a>
-        <a href="https://twitter.com/eznira_"><img src="images/twitter.png" alt="twitter icon"></a>
-        
+        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"
+          ><img src="images/facebook.png" alt="facebook icon"
+        /></a>
+        <a
+          href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
+          ><img src="images/instagram.png" alt="instagram icon"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+          ><img src="images/linkedin.png" alt="linked icon"
+        /></a>
+        <a href="https://twitter.com/eznira_"
+          ><img src="images/twitter.png" alt="twitter icon"
+        /></a>
       </div>
     </footer>
     <script src="../scripts/hambuger.js"></script>
