--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Goodness Okafor" />
-    <meta name="description"content="This is the kubwa Chamber of Commerce Website"/>
-    <meta property="og:title"content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
+    <meta
+      name="description"
+      content="This is the kubwa Chamber of Commerce Website"
+    />
+    <meta
+      property="og:title"
+      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image"content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"/>
+    <meta
+      property="og:image"
+      content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
+    />
     <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/base.css" />
