--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,10 +8,7 @@
       name="description"
       content="This is the kubwa Chamber of Commerce Website"
     />
-    <meta
-      property="og:title"
-      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
-    />
+    <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
