--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             >
           </li>
           <li><a href="lesson05/bom.html">DOM Manipulation</a></li>
-          <li></li>
+          <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
           <li></li>
           <li></li>
           <li></li>
