Responsive Images: srcset

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
         </li>
       </ul>
     </nav>
+    <div class="hero">
+      <picture>
+        <source media="(max-width: 500px)" srcset="images/aba-nigeria-temple.webp">
+        <source media="(max-width 960px)" srcset="images/aba-nigeria-temple-large.webp">
+        <img src="images/aba-nigeria-temple-Large.webp" alt="temple image">
+      </picture>
+      <div class="label">
+        <h3>Aba Nigeria Temple</h3>
+      </div>
+    </div>
     <main>
       <h2>WDD 230: Web Frontend Development</h2>
       <hr />
