Responsive Images: srcset

--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@
     </nav>
     <div class="hero">
       <picture>
-        <img src="images/aba-nigeria-temple-Large.webp" alt="temple image">
-        <source media="(max-width: 500px)" srcset="images/aba-nigeria-temple.webp">
-        <source media="(max-width 960px)" srcset="images/aba-nigeria-temple-large.webp">
+        <source
+          srcset="images/aba-nigeria-temple.webp"
+          media="(max-width: 500px)"
+        />
+        <img
+          src="images/aba-nigeria-temple-Large.webp"
+          alt="table setting"
+          width="1500"
+          height="750"
+        />
       </picture>
       <div class="label">
         <h3>Aba Nigeria Temple</h3>
@@ -89,7 +96,9 @@
             >
           </li>
           <li><a href="lesson05/bom.html">DOM Manipulation</a></li>
-          <li><a href="lesson06/responsive-images.html">Responsive Images</a></li>
+          <li>
+            <a href="lesson06/responsive-images.html">Responsive Images</a>
+          </li>
           <li></li>
           <li></li>
           <li></li>
