--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
           srcset="images/aba-nigeria-temple.webp"
           media="(max-width: 500px)"
         />
+        <source media="(max-width: 980px)" srcset="images/aba-nigeria-temple-large.webp">
         <img
-          src="images/aba-nigeria-temple-Large.webp"
-          alt="table setting"
+          src="images/aba-nigeria-temple-large.webp"
+          alt="aba nigeria temple"
           width="1500"
           height="750"
         />
