06 Assignment: Chamber Home Responsive Design

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <img src="images/chamber-logo.png" alt="logo" />
+      <img src="images/chamber-logo.webp" alt="logo" />
       <a href="#" id="menu"></a>
 
       <div class="toggle-container">
@@ -43,7 +43,7 @@
     </nav>
     <main class="main">
       <div class="hero">
-        <img src="images/hero-img.jpg" alt="Hero Image" />
+        <img src="images/wdd230-org-large.webp" alt="Hero Image" />
         <div class="introduction">
           <h1>Kubwa Chamber of Commerce</h1>
           <p>
@@ -53,10 +53,11 @@
           <button class="call-to-action">Join Us</button>
         </div>
       </div>
+
       <div class="sights">
-        <img src="images/image-1.jpg" alt="image of kubwa" class="cards" />
-        <img src="images/image-2.jpg" alt="image of kubwa" class="cards" />
-        <img src="images/image-3.jpg" alt="image of kubwa" class="cards" />
+        <img src="images/image-1.webp" alt="image of kubwa" class="cards" />
+        <img src="images/image-2.webp" alt="image of kubwa" class="cards" />
+        <img src="images/image-3.webp" alt="image of kubwa" class="cards" />
       </div>
       <section class="current-event">
         <h3>current Events</h3>
@@ -75,12 +76,9 @@
       </section>
       <section class="weather-card">
         <h3>weather-card</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          ipsa reiciendis fugit nisi magnam laboriosam, obcaecati facilis
-          impedit culpa esse! Veniam libero eaque itaque officiis culpa, porro
-          tempore delectus sint.
-        </p>
+        <p class="temperature"></p>
+        <p class="windchill"></p>
+        <p class="emoji"></p>
       </section>
       <section class="advertisment">
         <h3>Advertisment</h3>
@@ -116,5 +114,6 @@
     <script src="../scripts/hambuger.js"></script>
     <script src="../scripts/getdates.js"></script>
     <script src="scripts/toggle.js"></script>
+    <script src="scripts/windchill.js"></script>
   </body>
 </html>
