--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="This is the kubwa Chamber of Commerce Website"
     />
-    <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"/>
+    <meta
+      property="og:title"
+      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
+    />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
@@ -43,7 +46,22 @@
     </nav>
     <main class="main">
       <div class="hero">
-        <img src="images/wdd230-org-large.webp" alt="Hero Image" />
+        <!-- <img src="images/wdd230-org-large.webp" alt="Hero Image" /> -->
+        <picture>
+          <source
+            srcset="images/wdd230-org-small.jpg"
+            media="(max-width: 500px)"
+          />
+          <source
+            srcset="images/wdd230-org-medium.webp"
+            media="(max-width: 1000px)"
+          />
+          <source
+            srcset="images/wdd230-org-large.webp"
+            media="(max-width: 1000px)"
+          />
+          <img src="images/wdd230-org-large.webp" alt="table setting" />
+        </picture>
         <div class="introduction">
           <h1>Kubwa Chamber of Commerce</h1>
           <p>
