--- a/lesson07/lazyloading.html
+++ b/lesson07/lazyloading.html
@@ -1,22 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lazy Loading</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/lazyloading.css" />
+    <title>Document</title>
+  </head>
+  <body>
     <header>
-        <h1>Lazy Loading</h1>
+      <h1>Lazy Loading</h1>
     </header>
     <main>
-        <img width="400px" height="600px" loading="lazy"  src="https://picsum.photos/400/600" alt="">
-        <img width="400px" height="600px" loading="lazy"  src="https://picsum.photos/400/600" alt="">
-        <img width="400px" height="600px" loading="lazy"  src="https://picsum.photos/400/600" alt="">
-        <img width="400px" height="600px" loading="lazy"  src="https://picsum.photos/400/600" alt="">
-        <img width="400px" height="600px" loading="lazy"  src="https://picsum.photos/400/600" alt="">
-        <img width="400px" height="600px" loading="lazy"  src="https://picsum.photos/400/600" alt="">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+        praesentium fuga eos nesciunt illo voluptatum soluta quis ab totam!
+        Fugit quos cupiditate delectus unde possimus alias id. Alias magni
+        tempora magnam reprehenderit illo corrupti blanditiis, nam minima?
+        Tempore accusamus earum, dolore error enim aspernatur itaque animi
+        architecto consequatur quis recusandae dolores hic vero obcaecati soluta
+        libero! Modi, nisi sunt id exercitationem magnam deleniti consectetur,
+        sed quos aut, necessitatibus officiis ut eos dignissimos illum?
+        Consequatur quibusdam minima alias molestias illo non laboriosam qui
+        dolorum architecto suscipit est sed quia dignissimos laborum, corrupti
+        totam reiciendis vero autem. Deserunt, aspernatur inventore! Optio
+        eveniet ea doloribus reprehenderit autem minima, quos explicabo
+        provident, inventore dolores beatae quibusdam similique nam labore
+        repudiandae ullam ad, perferendis pariatur? Excepturi, dignissimos
+        dolore? Cum non consequatur quis delectus ad labore quam harum mollitia
+        nam corporis quo alias cumque vel nobis rem veniam iste odit,
+        reprehenderit animi, quia commodi numquam dolorem vitae. Reprehenderit
+        temporibus dolorum placeat quibusdam. Suscipit quia provident sequi rem
+        distinctio earum error fugit sit ab? Molestiae ratione in quisquam?
+        Accusamus, fuga velit. Accusantium aliquid sapiente et maiores deserunt
+        aspernatur ratione, harum, consequatur repellendus, repellat tempora sed
+        autem. Ut accusamus nam ea modi perspiciatis fuga, magni qui magnam
+        rerum est rem id dolores aut minus illo? Vel obcaecati aspernatur
+        repellendus pariatur id sunt autem ullam perspiciatis quibusdam tempora,
+        omnis reprehenderit necessitatibus laboriosam! Modi natus earum mollitia
+        officiis minima eius vero voluptatibus delectus asperiores unde
+        perspiciatis quidem repellat ad error in, ipsum aut. Repellendus eum
+        aliquam, velit vitae quibusdam alias tempore saepe vero voluptatum
+        consequuntur doloribus quidem soluta harum delectus, quaerat sed! Quo
+        laborum obcaecati nesciunt corporis nihil excepturi veniam perspiciatis,
+        impedit rerum tenetur totam vitae. Omnis mollitia cumque adipisci
+        consequatur voluptates facilis nisi odio a fugiat, enim et saepe
+        expedita. Quia veniam magni assumenda ex suscipit eos unde adipisci
+        facilis necessitatibus tenetur non, voluptatum consequuntur. Aliquid
+        minus et asperiores aspernatur, dignissimos, ratione vel dolor alias,
+        quibusdam quae rerum dolorem obcaecati placeat saepe expedita enim id
+        necessitatibus consequatur exercitationem sit iste libero perspiciatis
+        fugit suscipit. Maxime repellat quae laudantium, eveniet quia quaerat
+        consequuntur laborum quos, non vero omnis, delectus unde illum incidunt
+        beatae distinctio neque explicabo tempore sit blanditiis ratione at!
+        Enim consequuntur temporibus consequatur rem exercitationem rerum!
+        Necessitatibus excepturi architecto ex eaque dolores eius error omnis,
+        earum nesciunt quae quos aliquid fugiat exercitationem. Pariatur neque
+        eius ratione cum fugit laboriosam ea possimus saepe odio architecto
+        provident eligendi qui ducimus explicabo eum maxime omnis, earum minima
+        tempore totam modi. Odit doloribus dignissimos voluptas, totam in iste
+        quia non quasi ut laudantium rerum. Iste pariatur in assumenda fuga odio
+        quam autem inventore, numquam id quas nulla, eaque quod ullam! Odio
+        soluta adipisci vitae, deleniti ut ea a dolores quae inventore quod
+        nihil architecto vero quis aperiam ab cumque asperiores sunt
+        necessitatibus dolore animi obcaecati. Necessitatibus provident vel
+        libero excepturi maxime accusantium sint quo ea, ex repellat fugiat
+        repellendus illum voluptates nam fugit ad animi aliquam nihil! Nemo
+        consectetur, quae magni repudiandae cupiditate corrupti placeat quo
+        velit. Cum, possimus iusto nemo perspiciatis molestiae perferendis
+        voluptatibus laborum laudantium dolore dolorum quas vel illum
+        exercitationem eveniet, doloremque minus numquam ex error voluptates ab
+        esse consequatur! Quibusdam voluptates dolorum eos nihil? Architecto
+        ipsa iste velit dignissimos consectetur eos ipsam exercitationem dolore
+        distinctio debitis ullam suscipit, accusamus unde eius eum voluptatibus
+        inventore quasi, similique mollitia neque ut perspiciatis! Quos enim
+        officia debitis. Temporibus eaque mollitia dolor et, quis deleniti illum
+        iusto nihil non, enim earum nulla recusandae dolorem in magni dicta,
+        accusantium perspiciatis nisi repellendus quod? Distinctio neque,
+        incidunt dolores quam cum nemo sit, aliquid molestiae voluptatum ea
+        explicabo in? Possimus, saepe error odit ex praesentium, numquam, sed
+        tenetur assumenda eius ratione veniam! Sint obcaecati commodi
+        distinctio! Veniam repudiandae labore, aspernatur laborum, repellendus
+        sequi nam quas voluptas fuga inventore consectetur alias a minus et non
+        impedit fugiat itaque recusandae! Facere totam doloremque et placeat
+        ipsa asperiores ducimus nulla libero autem enim deserunt, quasi beatae
+        at, maxime est? A, officiis ipsa vero hic atque iusto enim repellat!
+        Distinctio illo sequi cupiditate nam ab, rerum ad aspernatur quibusdam!
+        Iste, inventore vel, beatae aut incidunt veniam itaque laboriosam, et
+        alias ad quae nostrum cupiditate voluptates sint similique sed?
+        Temporibus odio vero et voluptates quo dolor nam aliquid facilis
+        consequuntur!
+      </p>
+
+      <img
+        loading="lazy"
+        src="https://picsum.photos/400/600"
+        alt="place holder"
+        width="400px"
+        height="600px"
+      />
+      <img
+        loading="lazy"
+        src="https://picsum.photos/400/630"
+        alt="place holder"
+        width="400px"
+        height="600px"
+      />
+      <img
+        loading="lazy"
+        src="https://picsum.photos/400/620"
+        alt="place holder"
+        width="400px"
+        height="600px"
+      />
+      <img
+        loading="lazy"
+        src="https://picsum.photos/400/640"
+        alt="place holder"
+        width="400px"
+        height="600px"
+      />
+      <img
+        loading="lazy"
+        src="https://picsum.photos/400/700"
+        alt="place holder"
+        width="400px"
+        height="600px"
+      />
+      <img
+        loading="lazy"
+        src="https://picsum.photos/400/610"
+        alt="place holder"
+        width="400px"
+        height="600px"
+      />
     </main>
-    <footer></footer>
-</body>
+    <footer>
+      <p id="copyright"></p>
+      <p id="last-modified"></p>
+    </footer>
+    <script src="../scripts/getdates.js"></script>
+  </body>
 </html>
