--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
           <li>
             <a href="lesson06/responsive-images.html">Responsive Images</a>
           </li>
-          <li></li>
+          <li>
+            <a href="lesson07/lazyloading.html">Lazy Loading</a>
+          </li>
           <li></li>
           <li></li>
           <li></li>
