--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
 
       <section class="card">
         <h3>Information</h3>
-        <p>Sunny 23 Degrees</p>
+        <P class="visit"></P>
+        <P>SUNNY</P>
+        <p class="temperature"></p>
+        <p class="windchill"></p>
+        <p class="emoji"></p>
       </section>
       <div class="iframe">
         <iframe
@@ -130,5 +134,6 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hambuger.js"></script>
+    <!-- <script src="chamber/scripts/windchill.js"></script> -->
   </body>
 </html>
