--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
           srcset="images/aba-nigeria-temple.webp"
           media="(max-width: 500px)"
         />
-        <source media="(max-width: 980px)" srcset="images/aba-nigeria-temple-large.webp">
+        <source
+          media="(max-width: 980px)"
+          srcset="images/aba-nigeria-temple-large.webp"
+        />
         <img
           src="images/aba-nigeria-temple-large.webp"
           alt="aba nigeria temple"
-          width="1500"
-          height="750"
         />
       </picture>
       <div class="label">
@@ -111,8 +112,8 @@
 
       <section class="card">
         <h3>Information</h3>
-        <P class="visit"></P>
-        <P>SUNNY</P>
+        <p class="visit"></p>
+        <p>SUNNY</p>
         <p class="temperature"></p>
         <p class="windchill"></p>
         <p class="emoji"></p>
